--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,25 +6,25 @@ button {
     box-sizing: border-box;
     border: none;
     width: 72px;
-    height: 48px;
+    height: 56px;
     flex: 0 0 auto;
     font-size: 24px;
     margin: 4px;
     border-radius: 4px;
     transition: ease 0.3s;
-    box-shadow: 0px 4px 0px #00000070;
+    box-shadow: 0px 6px 0px #00000070;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 48px 24px 24px;
+    padding: 48px 16px 24px;
     border-radius: 16px;
-    background-color: #949494;
+    background-color: #8e8e8e;
     width: fit-content;
     margin: auto;
-    box-shadow: 0px 16px 0px #00000080;
+    box-shadow: 0px 16px 0px #0000008e
 }
 
 .screen {
@@ -43,7 +43,18 @@ button {
     height: 80px;
     border-radius: 8px;
     margin: 4px;
-    box-shadow: inset 8px 8px 8px #0000005d
+    box-shadow: inset 8px 8px 8px #0000005d;
+    flex: 1 1 auto;
+}
+
+.screen p {
+    margin: 0;
+    padding: 0;
+    font-size: 32px;
+    justify-content: end;
+    font-family: 'Casio fx-9860GII','Courier New', Courier, monospace;
+    color:#000000d0;
+    text-shadow: 2px 4px 2px #00000040;
 }
 
 .keypad {
@@ -87,8 +98,8 @@ button {
 
 .characters button {
     color: #ffffff;
-    background-color: #505050;
-    box-shadow: 0px 4px 0px #222222;
+    background-color: #373737;
+    box-shadow: 0px 4px 0px #181818;
 }
 
 button:hover {
