--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ button {
     border: 4px solid #838383;
     text-shadow: 2px 4px 2px #00000040;
     font-family: 'Casio fx-9860GII','Courier New', Courier, monospace;
-    font-size: 32px;
+    font-size: 24px;
     padding: 16px;
     width: 312px;
     height: 80px;
@@ -50,7 +50,7 @@ button {
 .screen p {
     margin: 0;
     padding: 0;
-    font-size: 32px;
+    font-size: 24px;
     justify-content: end;
     font-family: 'Casio fx-9860GII','Courier New', Courier, monospace;
     color:#000000d0;
@@ -120,6 +120,17 @@ button:active {
     border-radius: 4px;
     box-shadow: none;
     transition: ease 0.3s;
+}
+
+button:disabled {
+    color: #929292;
+    box-shadow: none;
+    cursor: not-allowed;
+}
+
+button:disabled:hover {
+    background-color: #7f7f7f;
+    border: 2px solid #7f7f7f;
 }
 
 .controls button:hover {
