--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,12 +19,38 @@ button {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 48px 16px 24px;
+    padding: 16px 16px 24px;
     border-radius: 16px;
     background-color: #8e8e8e;
     width: fit-content;
     margin: auto;
     box-shadow: 0px 16px 0px #0000008e
+}
+
+.top {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    margin: 4px;
+    padding: 24px 4px;
+    background-color: #373737;
+    border-radius: 8px;
+}
+
+.brand {
+    font-weight: 400;
+    color: #7f7f7f;
+    background-color: #2e2e2e;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+    padding: 8px;
+    border: 4px solid #373737;
+    margin: 4px;
+    border-radius: 8px;
+    text-shadow: 0px 2px 0px #00000070;
+    box-shadow: inset 4px 4px 0px #00000070;
+    text-transform: uppercase;
 }
 
 .screen {
@@ -34,16 +60,16 @@ button {
     box-sizing: border-box;
     background-color: #567477;
     color:#000000d0;
-    border: 4px solid #838383;
-    text-shadow: 2px 4px 2px #00000040;
+    border: 4px solid #373737;
+    text-shadow: 2px 4px 0px #00000040;
     font-family: 'Casio fx-9860GII','Courier New', Courier, monospace;
     font-size: 24px;
     padding: 16px;
-    width: 312px;
-    height: 80px;
+    width: 292x;
+    height: 96px;
     border-radius: 8px;
     margin: 4px;
-    box-shadow: inset 8px 8px 8px #0000005d;
+    box-shadow: inset 8px 8px 0px #0000005d;
     flex: 1 1 auto;
 }
 
