--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,11 +68,12 @@ button {
     background-color: #567477;
     color:#000000d0;
     border: 4px solid #373737;
-    text-shadow: 2px 4px 0px #00000040;
+    text-shadow: 0px 4px 0px #00000040;
     font-family: 'Casio fx-9860GII','Courier New', Courier, monospace;
     font-size: 24px;
     padding: 16px;
     width: 292x;
+    font-weight: 800;
     height: 96px;
     border-radius: 8px;
     margin: 4px;
